--- a/index.html
+++ b/index.html
@@ -29,25 +29,25 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                       <ul class="navbar-nav m-auto">
                         <li class="nav-item">
-                          <a class="nav-link link-light" aria-current="page" href="#">Home</a>
+                          <a class="nav-link link-light text-uppercase p-3" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link link-light" href="#">About</a>
+                          <a class="nav-link link-light text-uppercase p-3" href="#">About</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link link-light" href="#">Our services</a>
+                          <a class="nav-link link-light text-uppercase p-3" href="#">Our services</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link link-light" href="#">Portfoliot</a>
+                          <a class="nav-link link-light text-uppercase p-3" href="#">Portfoliot</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link link-light" href="#">Experience</a>
+                          <a class="nav-link link-light text-uppercase p-3" href="#">Experience</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link link-light" href="#">Blog</a>
+                          <a class="nav-link link-light text-uppercase p-3" href="#">Blog</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link link-light" href="#">Contact</a>
+                          <a class="nav-link link-light text-uppercase p-3" href="#">Contact</a>
                         </li>
                       </ul>
                     </div>
@@ -66,13 +66,13 @@
       <div class="jhon-banner">
         <div class="container">
           <div class="row">
-            <div class="col-xl-12">
-              <div class="jhon-banner-content">
-                <h3>Hello, I AM</h3>
-                <h1>John</h1>
-                <h2>Smith</h2>
-                <p>I have more then 10 years of Experience</p>
-                <button class="jhon-btn-primary bg-primary">Download</button>
+            <div class="col-xl-12 my-4">
+              <div class="jhon-banner-content text-white text-uppercase text-center my-5">
+                <h3 class="fs-1 fw-semibold">Hello, I AM</h3>
+                <h1 class="jhon-name jhon-text-color fw-bold">John</h1>
+                <p class="jhon-subtitle">Smith</p>
+                <p class="jhon-bio">I have more then 10 years of Experience</p>
+                <button class="jhon-btn-primary jhon-gradian-bg py-3 px-5 text-white text-uppercase border-0">Download CV</button>
 
               </div>
             </div>
