--- a/index.html
+++ b/index.html
@@ -425,8 +425,8 @@
                     </div>
                   </div>
                   <div class="col-xl-9">
-                    <div class="jhon-exprience-right">
-                      <p class="text-end">Lorem ipsum dolor sit amet, consectetur adipielit. Sunt sed ad possimus magm
+                    <div class="jhon-exprience-right jhon-before">
+                      <p class="text-start">Lorem ipsum dolor sit amet, consectetur adipielit. Sunt sed ad possimus magm
                         maiores.Ipa Lorem
                         ipsum
                         dolor sit amet, consectetur adiic Sunt sed ad posimus magnam maores. Ipsam as velt
@@ -438,7 +438,7 @@
                 <!-- advice content start -->
                 <div class="row my-5">
                   <div class="col-xl-9">
-                    <div class="jhon-exprience-right">
+                    <div class="jhon-exprience-right jhon-affter">
                       <p class="text-end">Lorem ipsum dolor sit amet, consectetur adipielit. Sunt sed ad possimus magm
                         maiores.Ipa Lorem
                         ipsum
@@ -464,8 +464,8 @@
                     </div>
                   </div>
                   <div class="col-xl-9">
-                    <div class="jhon-exprience-right">
-                      <p class="text-end">Lorem ipsum dolor sit amet, consectetur adipielit. Sunt sed ad possimus magm
+                    <div class="jhon-exprience-right jhon-before">
+                      <p class="text-start">Lorem ipsum dolor sit amet, consectetur adipielit. Sunt sed ad possimus magm
                         maiores.Ipa Lorem
                         ipsum
                         dolor sit amet, consectetur adiic Sunt sed ad posimus magnam maores. Ipsam as velt
@@ -477,7 +477,7 @@
                 <!-- advice content start -->
                 <div class="row my-5">
                   <div class="col-xl-9">
-                    <div class="jhon-exprience-right">
+                    <div class="jhon-exprience-right jhon-affter">
                       <p class="text-end">Lorem ipsum dolor sit amet, consectetur adipielit. Sunt sed ad possimus magm
                         maiores.Ipa Lorem
                         ipsum
@@ -562,7 +562,7 @@
         <div class="container">
           <div class="row">
             <div class="col-xl-12">
-              <div class="jhon-section-heading text-center my-5">
+              <div class="jhon-section-heading text-center my-5 text-white">
                 <h2 class="text-uppercase fs-1 fw-bold">CONTACT US</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
               </div>
