--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="responsive.css">
 </head>
 
 <body>
@@ -22,7 +23,7 @@
               <div class="primary-menu">
                 <nav class="navbar navbar-expand-lg">
                   <div class="container-fluid">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    <button class="navbar-toggler button-color" type="button" data-bs-toggle="collapse"
                       data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                       aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
@@ -69,7 +70,7 @@
           <div class="row">
             <div class="col-xl-12 my-4">
               <div class="jhon-banner-content text-white text-uppercase text-center my-5">
-                <h3 class="fs-1 fw-semibold">Hello, I AM</h3>
+                <h3 class="fw-semibold">Hello, I AM</h3>
                 <h1 class="jhon-name jhon-text-color fw-bold">John</h1>
                 <p class="jhon-subtitle">Smith</p>
                 <p class="fs-3 fw-semibold">I have more then 10 years of Experience</p>
@@ -85,14 +86,14 @@
 
     <!-- about us start -->
     <section class="jhon-about-us-area">
-      <div class="jhon-about-us">
+      <div class="jhon-about-us mt-5 mt-xl-0">
         <div class="container">
           <div class="row align-items-center">
             <div class="col-xl-4">
-              <div class="jhon-about-left text-end">
+              <div class="jhon-about-left text-center text-xl-end">
                 <h2 class="text-uppercase fs-1 fw-bold">John Smith</h2>
                 <h3 class="text-uppercase fs-5">Web designer</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipielit.
+                <p class="ms-5 ms-xl-0">Lorem ipsum dolor sit amet, consectetur adipielit.
                   Sunt sed ad possimus magm maiores.Ipa Lorem ipsum
                   dolor sit amet, consectetur adiic Sunt sed ad posimus magnam maores. Ipsam as velt blanditiis
                   debitis consequuntur mollita umenda nam obcaecati illo!</p>
@@ -100,11 +101,11 @@
             </div>
             <div class="col-xl-4">
               <div class="jhon-about-center">
-                <img class="img-fluid" src="img/jhon-img.jpg" alt="">
+                <img class="img-fluid " src="img/jhon-img.jpg" alt="">
               </div>
             </div>
             <div class="col-xl-4">
-              <div class="jhon-about-right">
+              <div class="jhon-about-right mt-3 mt-xl-0">
                 <div class="single-progress mb-4 text-center">
                   <p class="fs-6 text-uppercase">Design ( 80% )</p>
                   <div class="progress jhon-gradian-bg" role="progressbar" aria-label="Basic example" aria-valuenow="0"
@@ -146,7 +147,7 @@
     <section class="jhon-contact-info-area bg-secondary my-5 py-5">
       <div class="jhon-contact-info">
         <div class="container">
-          <div class="row row-cols-3">
+          <div class="row row-cols-1 row-cols-xl-3">
             <div class="col">
               <!-- single-contact start -->
               <div class="jhon-sigle-contact d-flex align-items-center gap-4">
@@ -218,7 +219,7 @@
             </div>
             <div class="col-xl-4">
               <div class="jhon-single-service text-center">
-                <i class="fa-solid fa-link jhon-gradian-bg text-white fs-1 px-3 py-4 rounded-circle text-white"></i>
+                <i class="fa-solid fa-link jhon-gradian-bg text-white fs-1 px-3 py-4 rounded-circle text-white mb-5"></i>
                 <h2>BEST SERVICE</h2>
                 <p>Lorem ipm dolor amet, consecte adipiing lit Sunt sed ad possimus magm maiores. Ipsa dolor sit ile
                   magnam maores.</p>
@@ -233,10 +234,10 @@
               </div>
             </div>
           </div>
-          <div class="row row-cols-3">
+          <div class="row row-cols-1 row-cols-xl-3">
             <div class="col">
               <div class="jhon-single-service text-center">
-                <i class="fa-solid fa-rocket jhon-gradian-bg text-white fs-1 px-3 py-4 rounded-circle text-white"></i>
+                <i class="fa-solid fa-rocket jhon-gradian-bg text-white fs-xl-1  px-3 py-4 rounded-circle text-white "></i>
                 <h2 class="fs-5 fw-bold text-uppercase mt-3">BEST SERVICE</h2>
                 <p>Lorem ipm dolor amet, consecte adipiing lit Sunt sed ad possimus magm maiores. Ipsa dolor sit ile
                   magnam maores.</p>
@@ -278,9 +279,9 @@
                 <div id="carouselExample" class="carousel slide">
                   <div class="carousel-inner">
                     <!-- start -->
-                    <div class="carousel-item active d-flex">
+                    <div class="carousel-item active">
                       <div class="single-cerosel row align-items-center">
-                        <div class="testimonial-content-left col-6 offset-2">
+                        <div class="testimonial-content-left col-12 col-xl-6 offset-xl-2">
                           <i class="fa-solid fa-quote-left text-white"></i>
                           <p class="text-end text-white">
                             Lorem ipm dolor amet, consecte adipiing lit Sunt sed ad possimus magm maiores. Ipsa dolor
@@ -291,7 +292,7 @@
                           <i class="fa-solid fa-quote-right text-white right-quate"></i>
                         </div>
                         <div
-                          class="testimonial-content-right d-flex gap-4  justify-content-center align-items-center col-4">
+                          class="testimonial-content-right d-flex gap-xl-4  justify-content-center align-items-center col-12 col-xl-4">
                           <div>
                             <img src="img/author.png" class="d-block border border-5 rounded-circle border-white"
                               alt="...">
@@ -304,9 +305,9 @@
                       </div>
                     </div>
                     <!-- end -->
-                    <div class="carousel-item d-flex">
+                    <div class="carousel-item">
                       <div class="single-cerosel row align-items-center">
-                        <div class="testimonial-content-left col-6 offset-2">
+                        <div class="testimonial-content-left col-xl-6 col-12 offset-xl-2 ofset-1">
                           <i class="fa-solid fa-quote-left text-white"></i>
                           <p class="text-end text-white">
                             Lorem ipm dolor amet, consecte adipiing lit Sunt sed ad possimus magm maiores. Ipsa dolor
@@ -317,7 +318,7 @@
                           <i class="fa-solid fa-quote-right text-white right-quate"></i>
                         </div>
                         <div
-                          class="testimonial-content-right d-flex gap-4  justify-content-center align-items-center col-4">
+                          class="testimonial-content-right d-flex gap-xl-4  justify-content-center align-items-center col-xl-4 col-12">
                           <div>
                             <img src="img/author.png" class="d-block border border-5 rounded-circle border-white"
                               alt="...">
@@ -419,14 +420,14 @@
                 <!-- advice content start -->
                 <div class="row my-5">
                   <div class="col-xl-3">
-                    <div class="jhon-exprience-conent-left  text-end">
+                    <div class="jhon-exprience-conent-left  text-xl-end">
                       <h2 class="fs-4">PERSONAL ADVISER</h2>
                       <h3 class="fs-6">2015 - 2016</h3>
                     </div>
                   </div>
                   <div class="col-xl-9">
                     <div class="jhon-exprience-right jhon-before">
-                      <p class="text-start">Lorem ipsum dolor sit amet, consectetur adipielit. Sunt sed ad possimus magm
+                      <p class="text-xl-start">Lorem ipsum dolor sit amet, consectetur adipielit. Sunt sed ad possimus magm
                         maiores.Ipa Lorem
                         ipsum
                         dolor sit amet, consectetur adiic Sunt sed ad posimus magnam maores. Ipsam as velt
@@ -439,7 +440,7 @@
                 <div class="row my-5">
                   <div class="col-xl-9">
                     <div class="jhon-exprience-right jhon-affter">
-                      <p class="text-end">Lorem ipsum dolor sit amet, consectetur adipielit. Sunt sed ad possimus magm
+                      <p class="text-xl-end">Lorem ipsum dolor sit amet, consectetur adipielit. Sunt sed ad possimus magm
                         maiores.Ipa Lorem
                         ipsum
                         dolor sit amet, consectetur adiic Sunt sed ad posimus magnam maores. Ipsam as velt
@@ -458,14 +459,14 @@
                 <!-- advice content start -->
                 <div class="row my-5 ">
                   <div class="col-xl-3">
-                    <div class="jhon-exprience-conent-left text-end">
+                    <div class="jhon-exprience-conent-left text-xl-end">
                       <h2 class="fs-4">PERSONAL ADVISER</h2>
                       <h3 class="fs-6">2015 - 2016</h3>
                     </div>
                   </div>
                   <div class="col-xl-9">
                     <div class="jhon-exprience-right jhon-before">
-                      <p class="text-start">Lorem ipsum dolor sit amet, consectetur adipielit. Sunt sed ad possimus magm
+                      <p class="text-xl-start">Lorem ipsum dolor sit amet, consectetur adipielit. Sunt sed ad possimus magm
                         maiores.Ipa Lorem
                         ipsum
                         dolor sit amet, consectetur adiic Sunt sed ad posimus magnam maores. Ipsam as velt
@@ -478,7 +479,7 @@
                 <div class="row my-5">
                   <div class="col-xl-9">
                     <div class="jhon-exprience-right jhon-affter">
-                      <p class="text-end">Lorem ipsum dolor sit amet, consectetur adipielit. Sunt sed ad possimus magm
+                      <p class="text-xl-end">Lorem ipsum dolor sit amet, consectetur adipielit. Sunt sed ad possimus magm
                         maiores.Ipa Lorem
                         ipsum
                         dolor sit amet, consectetur adiic Sunt sed ad posimus magnam maores. Ipsam as velt
@@ -520,9 +521,9 @@
             <div class="col-xl-4">
               <div class="jhon-single-blog">
                 <img src="img/blog-left.jpg" alt="">
-                <p class="my-3 fs-6 text-uppercase fw-semibold">Personal Adviser</p>
-                <h3 class="fs-6 mb-3">Computer and Using Some Color</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipielit. Sunt sed ad possimus magm maiores.Ipa Lorem ipsum
+                <p class="my-xl-3 my-0 fs-6 text-uppercase fw-semibold">Personal Adviser</p>
+                <h3 class="fs-6 mb-3 ">Computer and Using Some Color</h3>
+                <p class="mb-5 mb-xl-0">Lorem ipsum dolor sit amet, consectetur adipielit. Sunt sed ad possimus magm maiores.Ipa Lorem ipsum
                   dolor sit amet, consectetur adiic Sunt sed ad posimus magnam maores. </p>
               </div>
             </div> <!-- jhon-single-blog end -->
@@ -531,9 +532,9 @@
             <div class="col-xl-4">
               <div class="jhon-single-blog">
                 <img src="img/blog-middle.jpg" alt="">
-                <p class="my-3 fs-6 text-uppercase fw-semibold">Personal Adviser</p>
+                <p class="my-xl-3 my-0 fs-6 text-uppercase fw-semibold">Personal Adviser</p>
                 <h3 class="fs-5 fw-bold mb-3">Computer and Using Some Color</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipielit. Sunt sed ad possimus magm maiores.Ipa Lorem ipsum
+                <p class="mb-5 mb-xl-0">Lorem ipsum dolor sit amet, consectetur adipielit. Sunt sed ad possimus magm maiores.Ipa Lorem ipsum
                   dolor sit amet, consectetur adiic Sunt sed ad posimus magnam maores. </p>
               </div>
             </div> <!-- jhon-single-blog end -->
@@ -542,9 +543,9 @@
             <div class="col-xl-4">
               <div class="jhon-single-blog">
                 <img src="img/blog-right.jpg" alt="">
-                <p class="my-3 fs-6 text-uppercase fw-semibold">Personal Adviser</p>
+                <p class="my-xl-3 my-0 fs-6 text-uppercase fw-semibold">Personal Adviser</p>
                 <h3 class="fs-5 fw-bold mb-3">Computer and Using Some Color</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipielit. Sunt sed ad possimus magm maiores.Ipa Lorem ipsum
+                <p class="mb-5 mb-xl-0">Lorem ipsum dolor sit amet, consectetur adipielit. Sunt sed ad possimus magm maiores.Ipa Lorem ipsum
                   dolor sit amet, consectetur adiic Sunt sed ad posimus magnam maores. </p>
               </div>
             </div> <!-- jhon-single-blog end -->
